# cgen

./: Makefile  README.md  cgen.cabal
src/: CGen.hs
src/CGen/: Analysis.hs  Cons.hs  ConsGPU.hs  Monad.hs  OpenCLKernel.hs  Optimise.hs  Pretty.hs  SimpleAllocator.hs  Syntax.hs
src/CGen/Analysis/: Dataflow.hs  FreeVars.hs  Graph.hs  Liveness.hs  ReachingDefs.hs  TypeChecker.hs
src/CGen/OpenCL/: HostCode.hs  KernelCode.hs
src/CGen/Optimise/: ConstantFold.hs  ConstantPropagation.hs  CopyPropagation.hs  DeadCodeElimination.hs  LoopUnroll.hs
